--- a/server/static/index.html
+++ b/server/static/index.html
@@ -72,6 +72,9 @@ p,h3 {
 		<p>
 			Area: <span class="postcode" data-placeholder="AREA"></span> km<sup>2</sup>
 		</p>
+        <p>
+            Population: <span class="population" data-placeholder="POP2005"></span>
+        </p>
 	</div>
 </body>
 </html>
