Add a static tiles layer as an example

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -63,8 +63,8 @@ p,h3 {
  <!-- 
  -->
         <div class="map-layer"
-            data-tiles-url="service/world/{z}/{x}/{y}/tile.png"
-            data-utfgrid-url="service/world/{z}/{x}/{y}/tile.utf.json?cb={cb}"
+            data-tiles-url="service/api/tiles/world/{z}/{x}/{y}/tile.png"
+            data-utfgrid-url="service/api/tiles/world/{z}/{x}/{y}/tile.utf.json?cb={cb}"
             >
             <div class="template">
                 <h3>
