Add a simplest hello service

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -18,7 +18,8 @@ html, body {
 <body>
     <h1>It works!</h1>
     <ul>
-        <li><a href="./sandbox/">A sandbox service</a></li>
+        <li><a href="./hello/">The simplest hello service</a></li>
+        <li><a href="./sandbox/john.smith">A sandbox service</a></li>
         <li><a href="./world/">World Map</a></li>
     </ul>
 </body>
