Show coordinates of the marker

--- a/services/world/static/elements/mosaic-app/index.html
+++ b/services/world/static/elements/mosaic-app/index.html
@@ -99,6 +99,7 @@
             this.lat = latlng.lat;
             this.lng = latlng.lng;
             this.data = ev.detail.data;
+            this.mousePosition = latlng;
         },
         _handleMouseOver : function(ev) {
             this.mousePosition = ev.detail.latlng;
